--- a/app/views/person/person_list.ejs
+++ b/app/views/person/person_list.ejs
@@ -4,6 +4,8 @@
   <%- include('../partials/tableFull'); %>
 
   <!--/ Console Content-->
-
+    <div>
+        <%= query[0].nickname %> 
+    </div>
   <!--/container-->
   <%- include('../partials/footer'); %>
