Adding data list for each subpage

--- a/app/views/components/dashboard.njk
+++ b/app/views/components/dashboard.njk
@@ -8,7 +8,7 @@
               </div>
               <div class="flex-1 text-right md:text-center">
                   <h5 class="font-bold uppercase text-gray-400">Collected people</h5>
-                  <h3 class="font-bold text-3xl text-gray-600">$3249 <span class="text-green-500"><i class="fas fa-caret-up"></i></span></h3>
+                  <h3 class="font-bold text-3xl text-gray-600">{{dashboardData.person_count}}</h3>
               </div>
           </div>
       </div>
@@ -23,7 +23,7 @@
               </div>
               <div class="flex-1 text-right md:text-center">
                   <h5 class="font-bold uppercase text-gray-400">Supervised locations</h5>
-                  <h3 class="font-bold text-3xl text-gray-600">249 <span class="text-pink-500"><i class="fas fa-exchange-alt"></i></span></h3>
+                  <h3 class="font-bold text-3xl text-gray-600">{{dashboardData.location_count}} </h3>
               </div>
           </div>
       </div>
@@ -53,7 +53,7 @@
               </div>
               <div class="flex-1 text-right md:text-center">
                   <h5 class="font-bold uppercase text-gray-400">Meetings count</h5>
-                  <h3 class="font-bold text-3xl text-gray-600">152 days</h3>
+                  <h3 class="font-bold text-3xl text-gray-600">{{dashboardData.meeting_count}}</h3>
               </div>
           </div>
       </div>
@@ -68,7 +68,7 @@
               </div>
               <div class="flex-1 text-right md:text-center">
                   <h5 class="font-bold uppercase text-gray-400">Contact options</h5>
-                  <h3 class="font-bold text-3xl text-gray-600">7 tasks</h3>
+                  <h3 class="font-bold text-3xl text-gray-600">{{dashboardData.contact_type_count}}</h3>
               </div>
           </div>
       </div>
