Added inserting persons to database

--- a/app/public/css/tailwind.css
+++ b/app/public/css/tailwind.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-black-alt {
+    background: #191919;
+}
+
+.text-black-alt {
+    color: #191919;
+}
+
+.border-black-alt {
+    border-color: #191919;
+}
