--- a/app/views/location/location_list.njk
+++ b/app/views/location/location_list.njk
@@ -17,6 +17,8 @@
         ],
         title: "All locations"
     } %}
+    {% set buttonText = "location" %}
+    {% set color = "purple" %}
     {% include "../components/tableFull.njk" %}
 
 {% endblock %}
