--- a/app/views/meeting/meeting_list.njk
+++ b/app/views/meeting/meeting_list.njk
@@ -14,6 +14,8 @@
         ],
         title: "All meetings"
     } %}
+    {% set buttonText = "meeting" %}
+    {% set color = "green" %}
     {% include "../components/tableFull.njk" %}
 
 {% endblock %}
