--- a/app/views/person/person_list.njk
+++ b/app/views/person/person_list.njk
@@ -16,6 +16,8 @@
         ],
         title: "All people"
     } %}
+    {% set buttonText = "person" %}
+    {% set color = "pink" %}
     {% include "../components/tableFull.njk" %}
 
 {% endblock %}
