--- a/app/views/components/dashboard.njk
+++ b/app/views/components/dashboard.njk
@@ -38,7 +38,7 @@
               </div>
               <div class="flex-1 text-right md:text-center">
                   <h5 class="font-bold uppercase text-gray-400">Most contacts</h5>
-                  <h3 class="font-bold text-3xl text-gray-600">2 <span class="text-yellow-600"><i class="fas fa-caret-up"></i></span></h3>
+                  <h3 class="font-bold text-3xl text-gray-600">2</h3>
               </div>
           </div>
       </div>
@@ -83,7 +83,7 @@
               </div>
               <div class="flex-1 text-right md:text-center">
                   <h5 class="font-bold uppercase text-gray-400">Least contacts</h5>
-                  <h3 class="font-bold text-3xl text-gray-600">3 <span class="text-red-500"><i class="fas fa-caret-up"></i></span></h3>
+                  <h3 class="font-bold text-3xl text-gray-600">3</h3>
               </div>
           </div>
       </div>
