--- a/app/views/components/layout.njk
+++ b/app/views/components/layout.njk
@@ -27,61 +27,6 @@
                 </div>
                 <div class="w-1/2 pr-0">
                     <div class="flex relative inline-block float-right">
-                        <div class="relative text-sm text-gray-100">
-                            <button
-                id="userButton"
-                class="flex items-center focus:outline-none mr-3"
-              >
-                                <i class="fas fa-user-circle fa-2x mr-2"></i>
-                                <span class="hidden md:inline-block text-gray-100"
-                  >Hi, User</span
-                >
-                                <svg
-                  class="pl-2 h-2 fill-current text-gray-100"
-                  version="1.1"
-                  xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 129 129"
-                  xmlns:xlink="http://www.w3.org/1999/xlink"
-                  enable-background="new 0 0 129 129"
-                >
-                                    <g>
-                                        <path
-                      d="m121.3,34.6c-1.6-1.6-4.2-1.6-5.8,0l-51,51.1-51.1-51.1c-1.6-1.6-4.2-1.6-5.8,0-1.6,1.6-1.6,4.2 0,5.8l53.9,53.9c0.8,0.8 1.8,1.2 2.9,1.2 1,0 2.1-0.4 2.9-1.2l53.9-53.9c1.7-1.6 1.7-4.2 0.1-5.8z"
-/>
-                                    </g>
-                                </svg>
-                            </button>
-                            <div
-                id="userMenu"
-                class="bg-gray-900 rounded shadow-md mt-2 absolute mt-12 top-0 right-0 min-w-full overflow-auto z-30 invisible"
-              >
-                                <ul class="list-reset">
-                                    <li>
-                                        <a
-                      href="#"
-                      class="px-4 py-2 block text-gray-100 hover:bg-gray-800 no-underline hover:no-underline"
-                      >My account</a
-                    >
-                                    </li>
-                                    <li>
-                                        <a
-                      href="#"
-                      class="px-4 py-2 block text-gray-100 hover:bg-gray-800 no-underline hover:no-underline"
-                      >Notifications</a
-                    >
-                                    </li>
-                                    <li><hr class="border-t mx-2 border-gray-400"/></li>
-                                    <li>
-                                        <a
-                      href="#"
-                      class="px-4 py-2 block text-gray-100 hover:bg-gray-800 no-underline hover:no-underline"
-                      >Logout</a
-                    >
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
                         <div class="block lg:hidden pr-4">
                             <button
                 id="nav-toggle"
@@ -154,7 +99,7 @@
                 >
                                 <span class="pb-1 md:pb-0 text-sm">Relations</span>
                             </a>
-                        </li> #}
+                        </li> 
                     </ul>
 
                     <div class="relative pull-right pl-4 pr-4 md:pr-0">
@@ -162,7 +107,7 @@
               type="search"
               placeholder="Search"
               class="w-full bg-gray-900 text-sm text-gray-400 transition border border-gray-800 focus:outline-none focus:border-gray-600 rounded py-1 px-2 pl-10 appearance-none leading-normal"
-/>
+/> 
                         <div
               class="absolute search-icon"
               style="top: 0.375rem; left: 1.75rem"
@@ -179,182 +124,150 @@
                         </div>
                     </div>
                 </div>
-            </div>
-        </nav>
+            </div>#}
+                    </nav>
 
-        <div class="container w-full mx-auto pt-20">
+                    <div class="container w-full mx-auto pt-20">
 
-            <div class="w-full px-4 md:px-0 md:mt-8 mb-16 text-gray-800 leading-normal">
-                {% block content %}
-                    <p>I am empty :(</p>
-                {% endblock %}
-            </div>
-        </div>
-    </div>
-    {# <footer class="fixed bottom-0 left-0 right-0 bg-gray-900 border-t border-gray-400 shadow">
-        <div class="container max-w-md mx-auto flex py-8">
-
-            <div class="w-full mx-auto flex flex-wrap">
-                <div class="flex w-full md:w-1/2 ">
-                    <div class="px-8">
-                        <h3 class="font-bold text-gray-100">About</h3>
-                        <p class="py-4 text-gray-600 text-sm">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas vel mi ut felis tempus commodo nec id erat. Suspendisse consectetur dapibus velit ut lacinia. 
-                  </p>
+                        <div class="w-full px-4 md:px-0 md:mt-8 mb-16 text-gray-800 leading-normal">
+                            {% block content %}
+                                <p>I am empty :(</p>
+                            {% endblock %}
+                        </div>
                     </div>
                 </div>
 
-                <div class="flex w-full md:w-1/2">
-                    <div class="px-8">
-                        <h3 class="font-bold text-gray-100">Social</h3>
-                        <ul class="list-reset items-center text-sm pt-3">
-                            <li>
-                                <a class="inline-block text-gray-600 no-underline hover:text-gray-100 hover:text-underline py-1" href="#">Add social link</a>
-                            </li>
-                            <li>
-                                <a class="inline-block text-gray-600 no-underline hover:text-gray-100 hover:text-underline py-1" href="#">Add social link</a>
-                            </li>
-                            <li>
-                                <a class="inline-block text-gray-600 no-underline hover:text-gray-100 hover:text-underline py-1" href="#">Add social link</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer> #}
+                <script>
 
-    <script>
+                    /* Toggle dropdown list */
+                    /* https://gist.github.com/slavapas/593e8e50cf4cc16ac972afcbad4f70c8 */
 
-        /* Toggle dropdown list */
-        /* https://gist.github.com/slavapas/593e8e50cf4cc16ac972afcbad4f70c8 */
+                    var userMenuDiv = document.getElementById("userMenu");
+                    var userMenu = document.getElementById("userButton");
 
-        var userMenuDiv = document.getElementById("userMenu");
-        var userMenu = document.getElementById("userButton");
+                    var navMenuDiv = document.getElementById("nav-content");
+                    var navMenu = document.getElementById("nav-toggle");
 
-        var navMenuDiv = document.getElementById("nav-content");
-        var navMenu = document.getElementById("nav-toggle");
+                    document.onclick = check;
 
-        document.onclick = check;
+                    function check(e) {
+                        var target = (e && e.target) || (event && event.srcElement);
 
-        function check(e) {
-            var target = (e && e.target) || (event && event.srcElement);
+                        //User Menu
+                        if (!checkParent(target, userMenuDiv)) {
+                            // click NOT on the menu
+                            if (checkParent(target, userMenu)) {
+                                // click on the link
+                                if (userMenuDiv.classList.contains("invisible")) {
+                                    userMenuDiv
+                                        .classList
+                                        .remove("invisible");
+                                } else {
+                                    userMenuDiv
+                                        .classList
+                                        .add("invisible");
+                                }
+                            } else {
+                                // click both outside link and outside menu, hide menu
+                                userMenuDiv
+                                    .classList
+                                    .add("invisible");
+                            }
+                        }
 
-            //User Menu
-            if (!checkParent(target, userMenuDiv)) {
-                // click NOT on the menu
-                if (checkParent(target, userMenu)) {
-                    // click on the link
-                    if (userMenuDiv.classList.contains("invisible")) {
-                        userMenuDiv
-                            .classList
-                            .remove("invisible");
-                    } else {
-                        userMenuDiv
-                            .classList
-                            .add("invisible");
+                        //Nav Menu
+                        if (!checkParent(target, navMenuDiv)) {
+                            // click NOT on the menu
+                            if (checkParent(target, navMenu)) {
+                                // click on the link
+                                if (navMenuDiv.classList.contains("hidden")) {
+                                    navMenuDiv
+                                        .classList
+                                        .remove("hidden");
+                                } else {
+                                    navMenuDiv
+                                        .classList
+                                        .add("hidden");
+                                }
+                            } else {
+                                // click both outside link and outside menu, hide menu
+                                navMenuDiv
+                                    .classList
+                                    .add("hidden");
+                            }
+                        }
+
                     }
-                } else {
-                    // click both outside link and outside menu, hide menu
-                    userMenuDiv
-                        .classList
-                        .add("invisible");
-                }
-            }
 
-            //Nav Menu
-            if (!checkParent(target, navMenuDiv)) {
-                // click NOT on the menu
-                if (checkParent(target, navMenu)) {
-                    // click on the link
-                    if (navMenuDiv.classList.contains("hidden")) {
-                        navMenuDiv
-                            .classList
-                            .remove("hidden");
-                    } else {
-                        navMenuDiv
-                            .classList
-                            .add("hidden");
+                    function checkParent(t, elm) {
+                        while (t.parentNode) {
+                            if (t == elm) {
+                                return true;
+                            }
+                            t = t.parentNode;
+                        }
+                        return false;
                     }
-                } else {
-                    // click both outside link and outside menu, hide menu
-                    navMenuDiv
-                        .classList
-                        .add("hidden");
-                }
-            }
 
-        }
+                    const setActiveNavItem = (item, color) => {
+                        item
+                            .classList
+                            .remove(`text-gray-500`);
+                        item
+                            .classList
+                            .remove(`border-gray-900`);
+                        item
+                            .classList
+                            .add(`text-${color}-400`);
+                        item
+                            .classList
+                            .add(`border-${color}-400`);
+                        item
+                            .children[0]
+                            .classList
+                            .add(`text-${color}-400`);
+                    };
 
-        function checkParent(t, elm) {
-            while (t.parentNode) {
-                if (t == elm) {
-                    return true;
-                }
-                t = t.parentNode;
-            }
-            return false;
-        }
+                    const findActiveNavItem = () => {
+                        let activePage = window
+                            .location
+                            .pathname
+                            .split('/')[1];
+                        if (activePage == '') {
+                            let link = document
+                                .getElementById('home')
+                                .children[0];
+                            setActiveNavItem(link, "blue");
+                        }
+                        if (activePage == 'person') {
+                            let link = document
+                                .getElementById('people')
+                                .children[0];
+                            setActiveNavItem(link, "pink");
+                        }
+                        if (activePage == 'location') {
+                            let link = document
+                                .getElementById('locations')
+                                .children[0];
+                            setActiveNavItem(link, "purple");
+                        }
+                        if (activePage == 'meeting') {
+                            let link = document
+                                .getElementById('meetings')
+                                .children[0];
+                            setActiveNavItem(link, "green");
+                        }
+                        if (activePage == 'relation') {
+                            let link = document
+                                .getElementById('relations')
+                                .children[0];
+                            setActiveNavItem(link, "red");
+                        }
 
-        const setActiveNavItem = (item, color) => {
-            item
-                .classList
-                .remove(`text-gray-500`);
-            item
-                .classList
-                .remove(`border-gray-900`);
-            item
-                .classList
-                .add(`text-${color}-400`);
-            item
-                .classList
-                .add(`border-${color}-400`);
-            item
-                .children[0]
-                .classList
-                .add(`text-${color}-400`);
-        };
+                    };
 
-        const findActiveNavItem = () => {
-            let activePage = window
-                .location
-                .pathname
-                .split('/')[1];
-            if (activePage == '') {
-                let link = document
-                    .getElementById('home')
-                    .children[0];
-                setActiveNavItem(link, "blue");
-            }
-            if (activePage == 'person') {
-                let link = document
-                    .getElementById('people')
-                    .children[0];
-                setActiveNavItem(link, "pink");
-            }
-            if (activePage == 'location') {
-                let link = document
-                    .getElementById('locations')
-                    .children[0];
-                setActiveNavItem(link, "purple");
-            }
-            if (activePage == 'meeting') {
-                let link = document
-                    .getElementById('meetings')
-                    .children[0];
-                setActiveNavItem(link, "green");
-            }
-            if (activePage == 'relation') {
-                let link = document
-                    .getElementById('relations')
-                    .children[0];
-                setActiveNavItem(link, "red");
-            }
+                    findActiveNavItem();
+                </script>
 
-        };
-
-        findActiveNavItem();
-    </script>
-
-</body>
-</html>
+            </body>
+        </html>
