--- a/app/views/meeting/meeting_detail.njk
+++ b/app/views/meeting/meeting_detail.njk
@@ -5,25 +5,24 @@
         <div class="bg-gray-900 border border-gray-800 rounded shadow">
             <div class="border-b border-gray-800 p-3 flex items-center justify-between">
                 <h2 class="font-bold text-2xl uppercase text-white">{{query.first_name}}
-                    {{query.last_name}}</h2>
-                    <a href="/person/delete/{{query.id}}" class="inline-block border border-red-500 bg-red-500 text-white rounded-md px-4 py-2 m-2 transition duration-250 ease select-none hover:bg-red-800 focus:outline-none focus:shadow-outline">Delete</a>
+                    {{query.street}}</h2>
+                <a href="/meeting/delete/{{query.id}}" class="inline-block border border-red-500 bg-red-500 text-white rounded-md px-4 py-2 m-2 transition duration-250 ease select-none hover:bg-red-800 focus:outline-none focus:shadow-outline">Delete</a>
             </div>
             <div class="p-5 text-gray-500 flex content-center justify-center ">
-                <img src="{{image}}" alt="" class="rounded-full m-8 w-44 h-44">
+                <img src="{{image}}" alt="" class="object-cover  rounded-full m-8 w-44 h-44">
                 <div class="flex flex-col justify-center">
 
                     <p>
-                        <span class="text-gray-300">Nickname:</span>
-                        {{query.nickname}}</p>
+                        <span class="text-gray-300">Start:</span>
+                        {{query.start}}</p>
                     <p>
-                        <span class="text-gray-300">Fullname:</span>
-                        {{query.first_name}}
-                        {{query.last_name}}</p>
+                        <span class="text-gray-300">Duration (hh/mm):</span>
+                        {{query.duration}} 
+                    </p>
                     <p>
-                        <span class="text-gray-300">Genre:</span>
-                        {% if query.gender == "M"%} Male {% else %} Female {% endif %} <span class="text-gray-300">| Height:</span>
-                        {{query.height}}
-                        {% if query.height | length == 0 %}–{% endif %} cm</p>
+                        <span class="text-gray-300">Description:</span>
+                        {{query.description}}
+                    </p>
                     <p>
                         <span class="text-gray-300">Address:</span>
                         <div class="ml-4">
@@ -41,5 +40,7 @@
             </div>
         </div>
     </div>
+</div>
+</div>
 
 {% endblock %}
